Fix overflow bug

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -46,7 +46,7 @@ section.content
     column-gap: 32px
 
   @media screen and (max-width: $break-medium)
-    grid-template-columns: 1fr
+    grid-template-columns: minmax(0, 1fr)
     row-gap: 24px
 
 .reset-selection-button-container
